# dubbridge

./: .clinerules  .coverage  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  DEVELOPMENT_REFERENCE.md  Makefile  README.md  README_AGENT_ORDER.md  clippy.toml  deny.toml
.claude/: settings.json
.githooks/: pre-push
.github/workflows/: ci.yml  push-review.yml
apps/api/: Cargo.toml
apps/api/src/: cleanup.rs  consent_gate.rs  ingestion_service.rs  lib.rs  main.rs  playback_api_error.rs  playback_audit.rs  playback_policy.rs  playback_service.rs  review_gate.rs  state.rs  workspace_service.rs
apps/api/src/dto/: auth.rs  compliance.rs  ingestion.rs  mod.rs  notifications.rs  review.rs  workspace.rs
apps/api/src/middleware/: mod.rs  org_scope.rs
apps/api/src/routes/: auth.rs  compliance.rs  compliance_tests.rs  ingestion.rs  mod.rs  notifications.rs  playback.rs  review.rs  workspace.rs
apps/api/tests/: auth_public_routes.rs  compliance_test.rs  consent_gate_test.rs  ingestion_test.rs  notification_repo_test.rs  notification_schema_test.rs  notifications_api_test.rs  playback_delivery_test.rs  playback_grant_test.rs  playback_repo_test.rs  preparation_repo_test.rs  review_api_test.rs  review_gate_test.rs  review_repo_test.rs  review_schema_test.rs  subtitle_repo_test.rs  transcription_repo_test.rs  workspace_test.rs
apps/api/tests/support/: mod.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/gateway/: Cargo.toml
apps/gateway/src/: cookie.rs  cookie_ext.rs  lib.rs  main.rs  proxy.rs  state.rs
apps/gateway/src/auth/: handoff.rs  login.rs  logout.rs  mobile_session.rs  mod.rs  oauth_client.rs  pending.rs  relay.rs
apps/gateway/src/session/: mod.rs  store.rs
apps/gateway/tests/: auth_relay_test.rs  bearer_proxy_test.rs  e2e_lifecycle.rs
apps/worker-runner/: Cargo.toml
apps/worker-runner/src/: main.rs  preparation_artifact_persistence.rs  preparation_media_executor.rs  preparation_runtime.rs  preparation_runtime_tests.rs  review_enqueue.rs  subtitle_enqueue.rs  subtitle_runtime.rs  transcription_runtime.rs
apps/worker-runner/src/preparation_runtime_tests/: enqueue_flow.rs  preparation_flow.rs  support.rs
config/: README.md  default.toml  local.toml  production.toml  staging.toml
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: axum.rs  config.rs  credentials.rs  issuer.rs  lib.rs  membership.rs  principal.rs  service.rs  verifier.rs
crates/config/: Cargo.toml
crates/connectors/: Cargo.toml
crates/db/: Cargo.toml
crates/db/src/: artifact_repo.rs  asset_repo.rs  audit_repo.rs  consent_repo.rs  error.rs  lib.rs  notification_repo.rs  pending_ingestion_repo.rs  playback_repo.rs  preparation_repo.rs  review_repo.rs  rights_repo.rs  subtitle_repo.rs  transcription_repo.rs  user_account.rs  workspace_repo.rs
crates/domain/: Cargo.toml
crates/ingestion/: Cargo.toml
crates/ingestion/src/: lib.rs
crates/jobs/: Cargo.toml
crates/media/: Cargo.toml
crates/observability/: Cargo.toml
crates/playback/: Cargo.toml
crates/providers/: Cargo.toml
crates/qc/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: adapter.rs  config.rs  error.rs  lib.rs  local.rs  s3.rs
docs/: architecture.md  gemma-local-improve.md  python-exceptions.md
docs/adr/: ADR-006-postgres-metadata-object-storage-binaries.md  ADR-008-rights-ledger-fail-closed-precondition.md  ADR-018-structured-observability-traceable-events.md  ADR-019-stream-recording-engine-ffmpeg-subprocess.md  ADR-020-recording-session-lifecycle-and-segment-model.md  ADR-021-recording-to-asset-ingestion-bridge-fail-closed.md  ADR-022-source-protocol-support-and-ingest-authentication.md  ADR-023-api-client-authentication-and-principal-propagation.md  ADR-024-low-friction-first-party-api-access-via-session-gateway.md  ADR-025-platform-connector-ingest-and-owner-authorized-credentials.md  ADR-026-layered-fail-closed-configuration-and-environment-separation.md  ADR-027-org-membership-authorization.md  ADR-028-voice-consent-ledger.md  ADR-029-mobile-as-sole-authenticated-product-surface.md  ADR-030-review-decision-ledger-and-fail-closed-publication-gate.md  ADR-031-mobile-jwt-credential-auth-fenix-parity.md  ADR-032-hls-playback-delivery-boundary.md  ADR-033-open-knowledge-format-adoption.md  ADR-034-gemma-process-audit-and-reviewer-reconciliation.md  ADR-035-mobile-dark-theme-netflix-style.md  ADR-036-local-first-agentic-implementation-band.md  ADR-037-qwen36-27b-local-architect-complex-analyst.md  README.md
docs/articles/: okf-practical-repository-knowledge.md  readability-process.md
docs/audit/: 2026-05-31-project-consistency-review.md  2026-05-31-roadmap-adr-architecture-consolidation.md  gemma-review-overrides.md  mobile-design-md-playback-audit.md
docs/bdd/: README.md  p4-workspace.feature  (+9 more)
infra/: docker-compose.yml
mobile/: App.tsx  app.config.ts  eslint.config.js  jest.config.js  jest.setup.ts  package-lock.json  package.json
scripts/: adjudicator-packet.py  adjudicator_packet_test.py  agent-preflight.py  agent_preflight_test.py  check-config-secrets.sh  check-doc-consistency.sh  check-maintainability.py  check-primary-label-usage.py  check-review-budget.py  check-roadmap-drift.sh  check-task-unit-coverage.sh  check_maintainability_test.py  check_okf_frontmatter.py  check_okf_frontmatter_test.py  check_review_budget_test.py  check_roadmap_drift_test.py  check_task_unit_coverage_test.py  daily-open.sh  delegate-low-rri.py  delegate_low_rri_test.py  dependency_security_test.py  gemma-audit-report.py  gemma-code-review.py  gemma-push-review.py  gemma_audit_report_test.py  gemma_code_review_test.py  gemma_local.py  gemma_local_test.py  gemma_push_ops_test.py  gemma_push_review_test.py  parse-review-findings.py  parse_review_findings_test.py  peer-workflow-review.py  peer_workflow_review_test.py  push_review_commit.py  push_review_commit_test.py  rri.py  rri_test.py  show-codex-session-model.py  show_codex_session_model_test.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+461 files in other folders)
