[workspace]
members = [
  "apps/api",
  "apps/worker-runner",
  "apps/cli",
  "crates/domain",
  "crates/db",
  "crates/storage",
  "crates/jobs",
  "crates/media",
  "crates/providers",
  "crates/qc",
  "crates/auth",
  "crates/audit",
  "crates/ingestion",
  "crates/config",
  "crates/connectors",
  "crates/observability",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "LicenseRef-Proprietary"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid", "time", "macros"] }
apalis = { version = "0.7" }
object_store = { version = "0.11", features = ["aws"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "macros"] }

[workspace.lints.rust]
unsafe_code = "forbid"
