[workspace]
members = [
  "apps/api",
  "apps/gateway",
  "apps/worker-runner",
  "apps/cli",
  "crates/domain",
  "crates/db",
  "crates/storage",
  "crates/jobs",
  "crates/media",
  "crates/providers",
  "crates/qc",
  "crates/auth",
  "crates/audit",
  "crates/ingestion",
  "crates/config",
  "crates/connectors",
  "crates/observability",
  "crates/playback",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "LicenseRef-Proprietary"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid", "time", "macros"] }
apalis = { version = "0.7" }
# v0.14.1-rc1; pinned to the verified upstream tag commit until 0.14.1 is published.
object_store = { git = "https://github.com/apache/arrow-rs-object-store.git", rev = "c7316d29face118e7409eead0cda098f38589428", features = ["aws"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "macros"] }

[workspace.lints.rust]
unsafe_code = "forbid"

# Production-readiness lints. These reject demo/debug-grade code at the AST level
# across the whole workspace. Test code is exempted centrally via clippy.toml
# (allow-*-in-tests); justified exceptions use `#[allow(clippy::..)]` at the site.
# Severity is "deny": any clippy run fails on these, independent of `-D warnings`
# (`cargo build` is unaffected — these are clippy-only lints).
[workspace.lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Readability: reject overly long functions (default threshold 100 lines).
too_many_lines = "deny"
# SRP gate: functions must stay below the cognitive complexity threshold
# configured in clippy.toml (cognitive-complexity-threshold = 15).
# Stable as of clippy 0.1.96 (previously noted as nursery — incorrect).
cognitive_complexity = "deny"
