[package]
name = "dubbridge-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["multipart"] }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
uuid.workspace = true
time.workspace = true
sha2 = "0.10"
thiserror = "2.0"
async-trait = "0.1"
tempfile = "3"
dubbridge-config = { path = "../../crates/config" }
dubbridge-observability = { path = "../../crates/observability" }
dubbridge-auth = { path = "../../crates/auth" }
dubbridge-db = { path = "../../crates/db" }
dubbridge-domain = { path = "../../crates/domain" }
dubbridge-jobs = { path = "../../crates/jobs" }
dubbridge-storage = { path = "../../crates/storage" }
dubbridge-ingestion = { path = "../../crates/ingestion" }
dubbridge-audit    = { path = "../../crates/audit" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
dubbridge-media = { path = "../../crates/media" }

[lints]
workspace = true
