[package]
name = "dubbridge-worker-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
apalis.workspace = true
tokio.workspace = true
tracing.workspace = true
sqlx.workspace = true
time.workspace = true
uuid.workspace = true
async-trait = "0.1"
sha2 = "0.10"
tempfile = "3"
dubbridge-config = { path = "../../crates/config" }
dubbridge-db = { path = "../../crates/db" }
dubbridge-domain = { path = "../../crates/domain" }
dubbridge-jobs = { path = "../../crates/jobs" }
dubbridge-media = { path = "../../crates/media" }
dubbridge-observability = { path = "../../crates/observability" }
dubbridge-providers = { path = "../../crates/providers" }
dubbridge-storage = { path = "../../crates/storage" }

[lints]
workspace = true
