[package]
name = "dubbridge-audit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dubbridge-db     = { path = "../db" }
dubbridge-domain = { path = "../domain" }
sqlx             = { workspace = true }
tracing          = { workspace = true }
thiserror        = "2"

[lints]
workspace = true
