[package]
name = "dubbridge-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.13"
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
