[package]
name = "dubbridge-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
axum.workspace = true
bcrypt = "0.19.2"
dubbridge-db = { path = "../db" }
dubbridge-domain = { path = "../domain" }
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.13"
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
