[package]
name = "dubbridge-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true, features = ["migrate"] }
dubbridge-config = { path = "../config" }
dubbridge-domain = { path = "../domain" }
thiserror = "2.0"
uuid.workspace = true
time.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
