[package]
name = "dubbridge-ingestion"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dubbridge-db     = { path = "../db" }
dubbridge-domain = { path = "../domain" }
dubbridge-audit  = { path = "../audit" }
sqlx.workspace = true
uuid.workspace = true
time.workspace = true
thiserror = "2.0"
tracing.workspace = true

[lints]
workspace = true
